--- a/includes/style.css
+++ b/includes/style.css
@@ -11,8 +11,8 @@ a{text-decoration: none;}
 h2{
     margin-bottom: 40px;
     padding-top: 80px;
-    font-size: 35px;
     text-align: center;
+    font-size: 35px;
     color: #2d3950;
 }
 
@@ -22,33 +22,33 @@ header{
     display: block;
     background-color: #f6f9f9;
     height:100px;
+    width: 1600px;
 }
 #logo{
-    margin-left: 250px;
-    margin-top: 40px;
-    margin-top: 40px;
-    padding-left: 60px;
     display: inline-block;
+    margin-top: 40px;
+    margin-left: 250px;
+    padding-left: 60px;
     background-image: url(../images/pinksupermanlogo.png);
     background-repeat: no-repeat;
-    color: #264951;
     font-size: 30px;
+    color: #264951;
 }
  nav{
+     display: inline-block;
      margin-top: 40px;
      margin-bottom: 40px;
-     display: inline-block;
-     font-size: 22px;
      margin-left: 80px;
+     font-size: 22px;
 }
 a.title_links{
     text-decoration: none;
-    color: #264951;
-    font-size: 22px;
     display: inline-block;
-    font-weight: bold;
     padding-left: 30px;
     padding-right: 30px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #264951;
 }
 a.title_links:hover {
    color: #a9a9a9;
@@ -57,112 +57,122 @@ a.title_links:hover {
 /*------ photo section ------------------------------------------------*/
 
 #photo_section{
+    display:block;
     background-image: url(../images/bg_image.jpg);
     width: 1600px;
     height: 800px;
-    display:block;
-    color: #ffffff;
     text-align: center;
+    color: #ffffff;
 }
 
 h1 {
-    font-size: 70px;
-    text-align: center;
+    display: inline-block;
     margin-top: 200px;
     margin-bottom: 40px;
-    display: inline-block;
+    text-align: center;
     border-bottom: 1px solid #15a4fa;
+    font-size: 70px;
 }
 
 .slogen{
-    font-size: 22px;
-    text-align: center;
     margin-top: 35px;
     margin-bottom: 65px;
+    text-align: center;
+    font-size: 22px;
 }
 
 .link_github{
     text-decoration:none;
-    color: #ffffff;
+    display: inline-block;
+    padding: 22px;
     border:1px solid #15a4fa;
     font-size: 22px;
-    padding: 22px;
+    color: #ffffff;
+}
+
+.to_next_section{
+    display:block;
+    margin-top:175px ;
+    margin-left: 790px;
+    background-image: url(../images/arrow-down.png);
+    background-repeat: no-repeat;
+    width: 21px;
+    height: 14px;
 }
 
 /*------ about myself section ------------------------------*/
 
-.about_myself_section{background-color: #f6f9f9;}
+#about_myself_section{background-color: #f6f9f9;}
 
 
 .about_myself_content{
-    font-size: 20px;
+    padding-bottom: 110px;
     text-align: center;
+    font-size: 20px;
     color:#999999;
     line-height: 150%;
-    padding-bottom: 110px;
 }
 
 /*------ skills section -----------------------------------*/
 
 h2.skills{
     margin-top: 75px;
-    text-align: center;
     margin-bottom: 70px;
+    text-align: center;
 }
 .skills_img {
-    height: 100px;
-    width: 100px;
+    display: inline-block;
     margin-right: 35px;
     margin-left: 355px;
     margin-bottom: 30px;
-    display: inline-block;
     text-align: center;
     vertical-align: middle;
+    height: 100px;
+    width: 100px;
 }
 ul{
-    font-size: 20px;
     margin-bottom: 110px;
+    font-size: 20px;
 }
 /*------ footer -------------------------------------------*/
 
 footer{
+    display: block;
     padding-top: 25px;
     background-color: #f6f9f9;
-    display: block;
     height: 90px;
+    width: 1699px;
 }
 
 .footer_prop{
-    height: 100%;
     margin-left: 250px;
     margin-bottom: 25px;
     height: 40px;
 }
 
 .facebook{
-    background-image: url(../images/facebook.png);
     display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-repeat: no-repeat;
     padding-left: 0px;
     padding-right: 0px;
-
+    background-image: url(../images/facebook.png);
+    background-repeat: no-repeat;
+    height: 40px;
+    width: 40px;
 }
 .linkedin{
-    background-image: url(../images/linkedin.png);
     display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-repeat: no-repeat;
     padding-left: 0px;
     padding-right: 0px;
+    background-image: url(../images/linkedin.png);
+    background-repeat: no-repeat;
+    height: 40px;
+    width: 40px;
 }
 .my_mail{
     display: inline-block;
+    padding-left: 10px;
+    vertical-align: middle;
     height: 40px;
     width: 40px;
-    vertical-align: middle;
-    padding-left: 10px;
     color:#999999;
 }
