--- a/includes/style.css
+++ b/includes/style.css
@@ -102,7 +102,10 @@ h1 {
 
 /*------ about myself section ------------------------------*/
 
-#about_myself_section{background-color: #f6f9f9;}
+#about_myself_section{
+    width: 1600px;
+    background-color: #f6f9f9;
+}
 
 
 .about_myself_content{
@@ -115,6 +118,9 @@ h1 {
 
 /*------ skills section -----------------------------------*/
 
+.skills_section{
+    width: 1600px;
+}
 h2.skills{
     margin-top: 75px;
     margin-bottom: 70px;
