--- a/includes/style.css
+++ b/includes/style.css
@@ -166,6 +166,15 @@ footer{
     height: 40px;
     width: 40px;
 }
+.gmail{
+    display: inline-block;
+    padding-left: 0px;
+    padding-right: 0px;
+    background-image: url(../images/gmail.png);
+    background-repeat: no-repeat;
+    height: 40px;
+    width: 40px;
+}
 .linkedin{
     display: inline-block;
     padding-left: 0px;
